samples/minimal-ingress/istio-micro-ingress/istio-microingress-gateways.yaml
# Gateway definitions must be in the same namespace with the workload.
# Secrets must also be in same namespace
# First gateway name is used for all Ingress resources.
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-autogenerated-k8s-ingress
spec:
  selector:
    istio: micro-ingress
  servers:
    - port:
        number: 80
        protocol: HTTP2
        name: http
      hosts:
        - "*"
    - hosts:
        - "httpbin-ingress.example.com"
      port:
        name: https-httpbin
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-httpbin-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-httpbin-certs/tls.crt
    - hosts:
        - "httpbin-ingress2.example.com"
        - "fortio-ingress.example.com"
      port:
        name: https-hello
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-hello-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-hello-certs/tls.crt

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: micro-ingress
  servers:
    - port:
        number: 80
        protocol: HTTP2
        name: http
      hosts:
        - "*"
    - hosts:
        - "httpbin.example.com"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-httpbin-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-httpbin-certs/tls.crt
    - hosts:
        - "httpbin2.example.com"
        - "fortio.example.com"
      port:
        name: https-hello2
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-hello-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-hello-certs/tls.crt
